--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Sunshine</string>
     <string name="refresh">Refresh</string>
+    <string name="title_activity_detail">DetailActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="pref_location_title">Location</string>
+    <string name="pref_location_default" translatable="false">94503</string>
+    <string name="pref_location_key" translatable="false">location</string>
 </resources>
