--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="pref_units_metric_label" translatable="false">Metric</string>
     <string name="pref_units_imperial_label" translatable="false">Imperial</string>
     <string name="preferred_location_map">Show Map</string>
+    <string name="share">Share</string>
 </resources>
