--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,6 @@
     <string name="pref_enable_notifications_true">Enabled</string>
     <string name="pref_enable_notifications_false">Not Enabled</string>
     <string name="pref_enable_notifications_default" translatable="false">true</string>
+    <string name="empty_state_forecast_list">No Weather Information Available</string>
+    <string name="empty_forecast_no_network">No Weather Information Available. The network is not available to fetch the weather data</string>
 </resources>
